fix z-index issue on user dropdown/navi

--- a/liqd_product/assets/scss/components/navi.scss
+++ b/liqd_product/assets/scss/components/navi.scss
@@ -52,6 +52,7 @@
         padding: 0;
         border: 0;
         position: static;
+        z-index: 0;
         background-color: transparent;
 
         &.collapse {
